<resources>
    <string name="app_name">OpenMaps</string>
    <string name="close">Cerrar</string>
    <string name="location_permission_denied">Permiso de ubicación denegado</string>
    <string name="settings">Ajustes</string>
    <string name="loading">Cargando...</string>
    <string name="no_route_found">No se encontró ruta</string>
    <string name="user_off_route">Te has desviado de la ruta</string>
    <string name="after">Después de %2$d m, %1$s</string>
    <string name="distance_km">%.1f km</string>
    <string name="distance_m">%.0f m</string>
    <string name="start">Iniciar</string>
    <string name="avoid_route_options">Opciones de ruta a evitar</string>
    <string name="avoid_tolls">Evitar peajes</string>
    <string name="avoid_motorways">Evitar autopistas</string>
    <string name="avoid_ferries">Evitar ferris</string>
    <string name="route_options">Opciones de ruta</string>
    <string name="fastest_route">Ruta más rápida</string>
    <string name="shortest_route">Ruta más corta</string>
    <string name="cancel_navigation">Cancelar navegación</string>
    <string name="overview_route">Vista general de la ruta</string>
    <string name="recenter_button">Recentrar mapa</string>
    <string name="search_hint">Buscar...</string>
    <string name="download_offline_maps">Descargar mapas offline</string>
    <string name="clear_downloaded_maps">Borrar mapas descargados</string>
</resources>
